--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,12 @@
 
 {% compress css %}
 <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
+<link rel="stylesheet" href="{% static "css/fancybox/jquery.fancybox.css" %}">
+<link rel="stylesheet" href="{% static "css/flexslider.css" %}">
 <link rel="stylesheet" href="{% static "css/mezzanine.css" %}">
 <link rel="stylesheet" href="{% static "css/bootstrap-theme.css" %}">
+<link rel="stylesheet" href="{% static "css/style.css" %}">
+<link rel="stylesheet" href="{% static "skins/default.css" %}">
 {% if LANGUAGE_BIDI %}
 <link rel="stylesheet" href="{% static "css/bootstrap-rtl.css" %}">
 {% endif %}
@@ -46,8 +50,12 @@
 {% block extra_head %}{% endblock %}
 </head>
 
+
 <body id="{% block body_id %}body{% endblock %}">
 
+<div id="wrapper">
+
+<header>
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 <div class="container">
 <div class="navbar-header">
@@ -68,9 +76,11 @@
 </div>
 </div>
 </div>
+</header>
+
+{% block all_content %}
 
 <div class="container">
-
 {% nevercache %}
 {% if messages %}
 <div class="messages">
@@ -83,74 +93,167 @@
 </div>
 {% endif %}
 {% endnevercache %}
-
-<h1>{% block title %}{% endblock %}</h1>
-
-<ul class="breadcrumb">
-{% spaceless %}
-{% block breadcrumb_menu %}{% page_menu "pages/menus/breadcrumb.html" %}{% endblock %}
-{% endspaceless %}
-</ul>
-
 </div>
 
+{#<h1>{% block title %}{% endblock %}</h1>#}
+{##}
+{#<ul class="breadcrumb">#}
+{#{% spaceless %}#}
+{#{% block breadcrumb_menu %}{% page_menu "pages/menus/breadcrumb.html" %}{% endblock %}#}
+{#{% endspaceless %}#}
+{#</ul>#}
+
+{% block breadcrumb_wrapper %}
+    <section id="inner-headline">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="breadcrumb">
+                        {% spaceless %}
+                            {% block breadcrumb_menu %}
+                                {% page_menu "pages/menus/breadcrumb.html" %}{% endblock %}
+                        {% endspaceless %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+{% endblock %}
+
+{% block title_wrapper %}
+    <section class="callaction">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="big-cta">
+                        <div class="cta-text">
+                            <h2>{% block title %}{% endblock %}</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+{% endblock %}
+
+<section id="{% block section_id %}content{% endblock %}">
 <div class="container">
 <div class="row">
-
-<div class="col-md-2 left">
-    {% block left_panel %}
-    <div class="panel panel-default tree">{% page_menu "pages/menus/tree.html" %}</div>
-    {% endblock %}
-</div>
-
-<div class="col-md-7 middle">
-    {% block main %}{% endblock %}
-</div>
-
-<div class="col-md-3 right">
-    {% nevercache %}
-    {% include "includes/language_selector.html" %}
-    {% include "includes/user_panel.html" %}
-    {% endnevercache %}
-    <div class="panel panel-default">
-    <div class="panel-body">
-    {% block right_panel %}
-    {% ifinstalled mezzanine.twitter %}
-    {% include "twitter/tweets.html" %}
-    {% endifinstalled %}
-    {% endblock %}
+{% block left_wrapper %}
+    <div class="col-md-{% block left_col_size %}2{% endblock %} {% block left_class %}left{% endblock %}">
+        {% block left_panel %}
+            <div class="panel panel-default tree">{% page_menu "pages/menus/tree.html" %}</div>
+        {% endblock %}
     </div>
+{% endblock %}
+{% block main_wrapper %}
+    <div class="col-md-{% block main_col_size %}7{% endblock %} {% block main_class %}middle{% endblock %}">
+        {% block main %}{% endblock %}
     </div>
+{% endblock %}
+{% block right_wrapper %}
+    <div class="col-md-{% block right_col_size %}3{% endblock %} {% block right_class %}right{% endblock %}">
+        {% nevercache %}
+            {% include "includes/language_selector.html" %}
+            {% include "includes/user_panel.html" %}
+        {% endnevercache %}
+        <aside class="right-sidebar">
+            {% block right_panel %}
+                {% ifinstalled mezzanine.twitter %}
+                    {% include "twitter/tweets.html" %}
+                {% endifinstalled %}
+            {% endblock %}
+        </aside>
+    </div>
+{% endblock %}
+{#<div class="col-md-3 right">#}
+{#    {% nevercache %}#}
+{#    {% include "includes/language_selector.html" %}#}
+{#    {% include "includes/user_panel.html" %}#}
+{#    {% endnevercache %}#}
+{#    <div class="panel panel-default">#}
+{#    <div class="panel-body">#}
+{#    {% block right_panel %}#}
+{#    {% ifinstalled mezzanine.twitter %}#}
+{#    {% include "twitter/tweets.html" %}#}
+{#    {% endifinstalled %}#}
+{#    {% endblock %}#}
+{#    </div>#}
+{#    </div>#}
+{#</div>#}
 </div>
+</div>
+</section>
 
-</div>
-</div>
+{% endblock all_content%}
+
 
 <footer>
 <div class="container">
 {% page_menu "pages/menus/footer.html" %}
+{#<div class="row">#}
+{#<p class="site-info text-center">#}
+{#    {% trans "Powered by" %}#}
+{#    <a href="http://mezzanine.jupo.org">Mezzanine</a>{% ifinstalled cartridge.shop %},#}
+{#    <a href="http://cartridge.jupo.org">Cartridge</a>{% endifinstalled %}#}
+{#    {% trans "and" %}#}
+{#    <a href="http://www.djangoproject.com">Django</a>#}
+{#    <span class="separator">|</span>#}
+{#    {% trans "Theme by" %} <a target="_blank" href="http://getbootstrap.com">Bootstrap</a>#}
+{#    {% ifinstalled mezzanine.mobile %}#}
+{#    <span class="separator">|</span>#}
+{#    <a href="{% url "set_device" "mobile" %}?next={{ request.path }}">{% trans "View Mobile Site" %}</a>#}
+{#    {% endifinstalled %}#}
+{#</p>#}
+{#</div>#}
+<div id="sub-footer">
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="copyright">
+                <p>
+                    <span>Template by </span><a target="_blank" href="http://bootstraptaste.com">Bootstraptaste</a>.
+                    Mezzanine theme by <a target="_blank" href="http://thecodinghouse.in">CodingHouse</a>
+                </p>
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <ul class="social-network">
+                <li><a title="" data-placement="top" href="#" data-original-title="Facebook"><i
+                        class="fa fa-facebook"></i></a></li>
+                <li><a title="" data-placement="top" href="#" data-original-title="Twitter"><i
+                        class="fa fa-twitter"></i></a></li>
+                <li><a title="" data-placement="top" href="#" data-original-title="Linkedin"><i
+                        class="fa fa-linkedin"></i></a></li>
+                <li><a title="" data-placement="top" href="#" data-original-title="Pinterest"><i
+                        class="fa fa-pinterest"></i></a></li>
+                <li><a title="" data-placement="top" href="#" data-original-title="Google plus"><i
+                        class="fa fa-google-plus"></i></a></li>
+            </ul>
+        </div>
 
-<div class="row">
-<p class="site-info text-center">
-    {% trans "Powered by" %}
-    <a href="http://mezzanine.jupo.org">Mezzanine</a>{% ifinstalled cartridge.shop %},
-    <a href="http://cartridge.jupo.org">Cartridge</a>{% endifinstalled %}
-    {% trans "and" %}
-    <a href="http://www.djangoproject.com">Django</a>
-    <span class="separator">|</span>
-    {% trans "Theme by" %} <a target="_blank" href="http://getbootstrap.com">Bootstrap</a>
-    {% ifinstalled mezzanine.mobile %}
-    <span class="separator">|</span>
-    <a href="{% url "set_device" "mobile" %}?next={{ request.path }}">{% trans "View Mobile Site" %}</a>
-    {% endifinstalled %}
-</p>
+
+    </div>
 </div>
 </div>
 </footer>
 
+</div>
+
 {% block footer_js %}
 {% include "includes/footer_scripts.html" %}
 {% endblock %}
+
+{% compress js %}
+<script src="{% static "js/jquery.easing.1.3.js"%}"></script>
+<script src="{% static "js/jquery.fancybox.pack.js"%}"></script>
+<script src="{% static "js/jquery.fancybox-media.js"%}"></script>
+<script src="{% static "js/google-code-prettify/prettify.js"%}"></script>
+<script src="{% static "js/portfolio/jquery.quicksand.js"%}"></script>
+<script src="{% static "js/portfolio/setting.js"%}"></script>
+<script src="{% static "js/jquery.flexslider.js"%}"></script>
+<script src="{% static "js/animate.js"%}"></script>
+<script src="{% static "js/custom.js"%}"></script>
+{% endcompress %}
 
 </body>
 </html>
