Modify blog list.

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
     {% endblock%}
 </div>
 <div class="navbar-collapse collapse">
-    {% block navbar_search_form %}{% search_form "all" %}{% endblock %}
+{#    {% block navbar_search_form %}{% search_form "all" %}{% endblock %}#}
     {% block navbar_dropdown_menu %}{% page_menu "pages/menus/dropdown.html" %}{% endblock%}
 </div>
 </div>
