--- a/templates/generic/includes/comment_form.html
+++ b/templates/generic/includes/comment_form.html
@@ -2,7 +2,7 @@
 
 <form method="post" id="contactform" action="{{ comment_url }}#comment">
    	{% csrf_token %}
-   	
+
 	{% for hidden in comment_form.hidden_fields %}
     {{ hidden }}
     {% endfor %}
@@ -16,7 +16,7 @@
 			
 		</div>
 		<div class="col-lg-4 field">
-			 <input type="url" value="b''" name="{{comment_form.url.value}}" id="id_url" placeholder="Enter your webiste">
+			 <input type="url" value="" name="url" id="id_url" placeholder="Optional: Enter your webiste">
 			
 		</div>
 		<div class="col-lg-12 margintop10 field">
