Fix bug, font awesome icons can't see in production env.     - As compressor is used for static files in production env.     - Avoid @import, simply list all css files in base.html.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,15 @@
 /* ==== Google font ==== */
-@import url('http://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700|Open+Sans:300,400,600,700');
+/*@import url('http://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700|Open+Sans:300,400,600,700');*/
 
 /* === prettify === */
-@import url('../js/google-code-prettify/prettify.css');
+/*@import url('../js/google-code-prettify/prettify.css');*/
 /* === fontawesome === */
-@import url('font-awesome.css');
+/*@import url('font-awesome.css');*/
 /* === custom icon === */
-@import url('custom-fonts.css');
+/*@import url('custom-fonts.css');*/
 /* ==== overwrite bootstrap standard ==== */
-@import url('overwrite.css');
-@import url('animate.css');
+/*@import url('overwrite.css');*/
+/*@import url('animate.css');*/
 
 /* ===================================
 1. General
