--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,18 @@
 <link rel="stylesheet" href="{% static "css/flexslider.css" %}">
 <link rel="stylesheet" href="{% static "css/mezzanine.css" %}">
 <link rel="stylesheet" href="{% static "css/bootstrap-theme.css" %}">
+
+<!-- Google font -->
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700|Open+Sans:300,400,600,700">
+<!-- prettify -->
+<link rel="stylesheet" href="{% static "js/google-code-prettify/prettify.css" %}">
+<link rel="stylesheet" href="{% static "css/font-awesome.css" %}">
+<link rel="stylesheet" href="{% static "css/custom-fonts.css" %}">
+<!-- overwrite bootstrap standard -->
+<link rel="stylesheet" href="{% static "css/overwrite.css" %}">
+<link rel="stylesheet" href="{% static "css/animate.css" %}">
+
+
 <link rel="stylesheet" href="{% static "css/style.css" %}">
 <link rel="stylesheet" href="{% static "skins/default.css" %}">
 {% if LANGUAGE_BIDI %}
